CR-2002-11-28-2  Cleanup:   un-commented message macros not used in source code
                 L10N:

CR-2002-11-28-1  Testsuite: added code to un-comment unused message macros
                            ( code itself is also un-commented in procedure
                              check_c_source_code_files_for_macros() )

CR-2002-11-27-3  Cleanup:   a) removed/corrected duplicate message ids
                 Testsuite: b) handle_vi_edit() procedure reports now an error
                               if no expected parameter string matches the 
                               output of vi.

CR-2002-11-27-2  Testsuite: removed hostname parameter in translate call. Using
                 Bugfix:    asterisk "*" instead. Now long hostnames will not
                 L10N:      influent string parsing anymore.

CR-2002-11-27-1  Testsuite: a) submit_del check: debug modifications
                            b) new procedure: 
                               check_c_source_code_files_for_macros()
                               This procedure will return macros, that are
                               unused in source code.
                            c) open_remote_spawn_process() closing connection
                               when execution script not exists on remote host.

CR-2002-11-27-0  Testsuite: a) get_version_info() must test if product mode file
                 Bugfix:       exists, before opening the file. If file wasn't
                               available a TCL error occured.
                            b) increased default timeout for submit_job() and
                               added more debug output for timeout errors.

CR-2002-11-26-0  Testsuite: increased timeouts in qmaster complex check. Old
                            timeout was too short to let the execd load values
                            timeout at qmaster.

CR-2002-11-25-1  Testsuite: a) start_remote_tcl_prog() in shadowd test broken, 